/*
   Copyright (c) 2019 AT&T Intellectual Property.
   Copyright (c) 2019 Nokia.

   Licensed under the Creative Commons Attribution 4.0 International
   Public License (the "License"); you may not use this file except
   in compliance with the License. You may obtain a copy of the License at

       https://creativecommons.org/licenses/by/4.0/

   Unless required by applicable law or agreed to in writing, documentation
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
*/

syntax = "proto3";

package streaming_protobufs;

option go_package = "gerrit.o-ran-sc.org/r/ric-plt/streaming-protobufs";

import "google/protobuf/wrappers.proto";
import "x2ap_common_types.proto";
import "rrc_cg_config_info.proto";

/*
   Protocol Buffer definition for SGNB ADDITION REQUEST message.
   (3GPP 36.423, ver 15.4.0)

   Naming convention follows the ASN.1 field naming defined in chapter
   '9.3 Message and Information Element Abstract Syntax (with ASN.1)' of below document:
   http://www.3gpp.org/ftp//Specs/archive/36_series/36.423/36423-f40.zip

   Dashes converted to underscores to make protobuf message syntax correct.
*/


message SgNBAdditionRequest
{
    SgNBAdditionRequest_IEs protocolIEs = 1;
}

message SgNBAdditionRequest_IEs
{
    uint32 id_MeNB_UE_X2AP_ID = 1;
    NRUESecurityCapabilities id_NRUESecurityCapabilities = 2;
    bytes id_SgNBSecurityKey = 3;
    UEAggregateMaximumBitRate id_SgNBUEAggregateMaximumBitRate = 4;
    google.protobuf.BytesValue id_SelectedPLMN = 5;
    HandoverRestrictionList id_HandoverRestrictionList = 6;
    E_RABs_ToBeAdded_SgNBAddReqList id_E_RABs_ToBeAdded_SgNBAddReqList = 7;
    CG_ConfigInfo id_MeNBtoSgNBContainer = 8;
    google.protobuf.UInt32Value id_SgNB_UE_X2AP_ID = 9;
    ExpectedUEBehaviour id_ExpectedUEBehaviour = 10;
    google.protobuf.UInt32Value id_MeNB_UE_X2AP_ID_Extension = 11;
    SplitSRBs id_RequestedSplitSRBs = 12;
    MeNBResourceCoordinationInformation id_MeNBResourceCoordinationInformation = 13;
    SGNB_Addition_Trigger_Ind id_SGNB_Addition_Trigger_Ind = 14;
    google.protobuf.UInt32Value id_SubscriberProfileIDforRFP = 15;
    ECGI id_MeNBCell_ID = 16;
}

message E_RABs_ToBeAdded_SgNBAddReqList
{
    repeated E_RABs_ToBeAdded_SgNBAddReq_ItemIEs items = 1;
}

message E_RABs_ToBeAdded_SgNBAddReq_ItemIEs
{
    E_RABs_ToBeAdded_SgNBAddReq_Item id_E_RABs_ToBeAdded_SgNBAddReq_Item = 1;
}

message E_RABs_ToBeAdded_SgNBAddReq_Item
{
    uint32 e_RAB_ID = 1;
    uint32 drb_ID = 2;
    EN_DC_ResourceConfiguration en_DC_ResourceConfiguration = 3;
    oneof resource_configuration {
        E_RABs_ToBeAdded_SgNBAddReq_SgNBPDCPpresent sgNBPDCPpresent = 4;
        E_RABs_ToBeAdded_SgNBAddReq_SgNBPDCPnotpresent sgNBPDCPnotpresent = 5;
    }
    repeated E_RABs_ToBeAdded_SgNBAddReq_ItemExtIEs iE_Extensions = 6;
}

message E_RABs_ToBeAdded_SgNBAddReq_ItemExtIEs
{
}

message E_RABs_ToBeAdded_SgNBAddReq_SgNBPDCPpresent
{
    E_RAB_Level_QoS_Parameters full_E_RAB_Level_QoS_Parameters = 1;
    GBR_QosInformation max_MCG_admit_E_RAB_Level_QoS_Parameters = 2;
    DL_Forwarding dL_Forwarding = 3;
    GTPtunnelEndpoint meNB_DL_GTP_TEIDatMCG = 4;
    GTPtunnelEndpoint s1_UL_GTPtunnelEndpoint = 5;
    repeated E_RABs_ToBeAdded_SgNBAddReq_SgNBPDCPpresentExtIEs iE_Extensions = 6;
}

message E_RABs_ToBeAdded_SgNBAddReq_SgNBPDCPpresentExtIEs
{
    RLCMode id_RLCMode_transferred = 1;
}

message E_RABs_ToBeAdded_SgNBAddReq_SgNBPDCPnotpresent
{
    E_RAB_Level_QoS_Parameters requested_SCG_E_RAB_Level_QoS_Parameters = 1;
    GTPtunnelEndpoint meNB_UL_GTP_TEIDatPDCP = 2;
    GTPtunnelEndpoint secondary_meNB_UL_GTP_TEIDatPDCP = 3;
    RLCMode rlc_Mode = 4;
    ULConfiguration uL_Configuration = 5;
    repeated E_RABs_ToBeAdded_SgNBAddReq_SgNBPDCPnotpresentExtIEs iE_Extensions = 6;
}

message E_RABs_ToBeAdded_SgNBAddReq_SgNBPDCPnotpresentExtIEs
{
    PDCPSnLength id_uLpDCPSnLength = 1;
    PDCPSnLength id_dLPDCPSnLength = 2;
    DuplicationActivation id_duplicationActivation = 3;
}
